--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,11 +9,13 @@
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.3",
+    "date-fns": "^3.1.0",
     "nodemon": "^3.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
+    "source-map-loader": "^4.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
